Update version and author

--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "prex-movies-app",
-  "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "https://ionicframework.com/",
+  "version": "1.0.0",
+  "author": "Agustin Contreras",
   "scripts": {
     "ng": "ng",
     "start": "ng serve --port 8100",
